[gd_scene load_steps=11 format=3 uid="uid://b66yj2jk6m2x5"]

[ext_resource type="Script" uid="uid://dpkhuk08hrkp5" path="res://scripts/entities/enemies/enemy.gd" id="1_5uy6h"]
[ext_resource type="Texture2D" uid="uid://cwt4st7is2mpe" path="res://assets/enemy/icon.svg" id="1_6xk8f"]
[ext_resource type="Script" uid="uid://cpqn2bfg7lovo" path="res://scripts/entities/enemies/character_body_2d.gd" id="2_38ino"]
[ext_resource type="PackedScene" uid="uid://boobhem0hxmka" path="res://scenes/health_bar.tscn" id="4_nb6gf"]
[ext_resource type="PackedScene" uid="uid://bw4r7akvtesl0" path="res://scenes/attack_component.tscn" id="5_jt03m"]
[ext_resource type="PackedScene" uid="uid://dwkjaugy7ph2v" path="res://scenes/entities/components/health_component.tscn" id="6_n7575"]
[ext_resource type="PackedScene" uid="uid://cyydygtb2muhm" path="res://scenes/hurtbox.tscn" id="7_jt03m"]
[ext_resource type="PackedScene" uid="uid://b1d2i3175mpwp" path="res://scenes/attack_area.tscn" id="8_n7575"]
[ext_resource type="PackedScene" uid="uid://bpgb64atyovx1" path="res://scenes/cooldown.tscn" id="9_qch6t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8e3ao"]
size = Vector2(126, 127)

[node name="Enemy" type="Node2D" groups=["enemies"]]
script = ExtResource("1_5uy6h")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("2_38ino")
speed = 500

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
modulate = Color(1, 0, 0, 1)
texture = ExtResource("1_6xk8f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_8e3ao")

[node name="Hurtbox" parent="CharacterBody2D" instance=ExtResource("7_jt03m")]
position = Vector2(3, 0)

[node name="AttackArea" parent="CharacterBody2D" instance=ExtResource("8_n7575")]
position = Vector2(1, -3)

[node name="HealthBar" parent="CharacterBody2D" instance=ExtResource("4_nb6gf")]
script = null

[node name="AttackComponent" parent="." instance=ExtResource("5_jt03m")]

[node name="HealthComponent" parent="." instance=ExtResource("6_n7575")]
max_health = 300

[node name="Cooldown" parent="." instance=ExtResource("9_qch6t")]

[connection signal="body_entered" from="CharacterBody2D/Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="CharacterBody2D/AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="damage_taken" from="HealthComponent" to="." method="_on_health_component_damage_taken"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
